# crazy_track

./: .gitignore  HANDOVER.md  README.md  pyproject.toml
configs/: datt.yaml
papers/paper1-benchmark/: README.md
papers/paper2-acrobatics/: README.md
reports/: 2026-07-22_lighthouse-sensor-mppi-tuning.md  2026-07-22_setup-and-pid-baseline.md  2026-07-23_multi-seed-training-and-lighthouse-refresh.md  2026-07-24_p2-acro4-maneuver-conditioning.md
results/2026-07-22_14-55-23_lissajous/: metadata.yaml  pid_fast.npz  summary.csv
results/2026-07-22_14-58-25_lissajous/: adrc_fast.npz  adrc_normal.npz  adrc_slow.npz  metadata.yaml  mppi_l1_slow.npz  pid_normal.npz  summary.csv
results/2026-07-22_15-00-11_lissajous/: adrc_fast.npz  metadata.yaml  summary.csv
results/2026-07-22_15-04-23_datt-train/: metadata.yaml
results/2026-07-22_15-05-17_lissajous/: metadata.yaml  mpc_fast.npz  mpc_normal.npz  mpc_slow.npz  summary.csv
results/2026-07-22_15-07-31_lissajous/: metadata.yaml  mpc_fast.npz  summary.csv
results/2026-07-22_15-20-36_lissajous/: metadata.yaml
results/2026-07-22_15-21-18_lissajous/: datt_fast.npz  datt_normal.npz  datt_slow.npz  metadata.yaml  summary.csv
results/2026-07-22_15-22-18_datt-train/: metadata.yaml
results/2026-07-22_15-28-08_lissajous-wind_const/: adrc_normal.npz  metadata.yaml  summary.csv
results/2026-07-22_15-45-21_lissajous/: datt_normal.npz  metadata.yaml  summary.csv
results/2026-07-22_15-46-05_fig5-final/: adrc_normal.npz  adrc_slow.npz  datt_fast.npz  datt_slow.npz  (+7 more)
scripts/: setup_env.sh
tests/: test_trajectories.py
(+1133 files in other folders)
