[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crazy-track"
version = "0.1.0"
description = "DATT Figure-5 trajectory-tracking benchmark replicated on the crazyflow Crazyflie simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Simulator (Linux/WSL2 recommended; JAX CPU wheels exist for Windows but are untested here)
sim = [
    "crazyflow",
    "gymnasium>=0.29",
]
# RL training (DATT uses a small PPO policy in PyTorch)
train = [
    "torch>=2.2",
    "stable-baselines3>=2.3",
    "tensorboard",
]
dev = [
    "pytest>=8.0",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
